objects/Deposit_Exposure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Deposit exposure configuration settings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Parameters__c</fullName>
        <label>Additional Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Types__c</fullName>
        <label>Relationship Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statuses__c</fullName>
        <label>Statuses</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Ownership</label>
        <type>Checkbox</type>
    </fields>
    <label>Deposit Exposure</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Relationship_Types__c</columns>
        <columns>Stages__c</columns>
        <columns>Statuses__c</columns>
        <columns>Use_Ownership__c</columns>
        <columns>Use_Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Additional_Parameters__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
        <language>en_US</language>
    </listViews>
</CustomObject>